--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "homepage": "",
   "main": "index.js",
   "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "test": "NODE_ENV=test jest --verbose",
     "start": "nodemon server/server.js",
-    "build": "webpack --mode production",
-    "dev": "nodemon server/server.js & webpack-dev-server --mode development --open --hot",
     "dev:hot": "NODE_ENV=development nodemon ./server/server.js & NODE_ENV=development webpack-dev-server --open --hot --inline --progress --colors --watch --content-base ./"
   },
   "jest": {
@@ -25,80 +26,73 @@
     }
   },
   "dependencies": {
-    "@babel/plugin-transform-async-to-generator": "^7.10.4",
-    "@babel/plugin-transform-runtime": "^7.11.5",
-    "@babel/runtime": "^7.11.2",
-    "@types/d3": "^5.7.2",
-    "@types/d3-selection-multi": "^1.0.8",
-    "@types/file-saver": "^2.0.1",
-    "@types/react": "^16.9.49",
-    "@types/react-dom": "^16.9.8",
-    "@types/recoil": "0.0.1",
-    "codemirror": "^5.57.0",
-    "d3": "^6.1.1",
-    "d3-selection": "^2.0.0",
+    "@babel/plugin-transform-async-to-generator": "7.27.1",
+    "@babel/plugin-transform-runtime": "7.27.3",
+    "@babel/runtime": "^7.27.3",
+    "@graphql-tools/schema": "^10.0.23",
+    "@types/d3": "7.4.3",
+    "@types/d3-selection-multi": "1.0.14",
+    "@types/file-saver": "2.0.7",
+    "@types/recoil": "0.0.9",
+    "bootstrap": "^5.3.6",
+    "codemirror": "^5.65.16",
+    "d3": "^7.9.0",
+    "d3-selection": "3.0.0",
     "d3-selection-multi": "^1.0.1",
-    "enzyme": "^3.11.0",
-    "express": "^4.17.1",
-    "express-graphql": "^0.9.0",
-    "file-saver": "^2.0.2",
-    "focus-trap-react": "^8.0.0",
-    "fs": "0.0.1-security",
+    "express": "^4.18.2",
+    "express-graphql": "0.12.0",
+    "file-saver": "2.0.5",
+    "focus-trap-react": "11.0.4",
     "graphql": "^15.3.0",
-    "graphql-playground-middleware-express": "^1.7.20",
-    "graphql-playground-react": "^1.7.26",
-    "graphql-tools": "^6.2.3",
-    "jszip": "^3.5.0",
-    "mysql2": "^2.2.3",
-    "pg": "^8.3.3",
-    "pg-hstore": "^2.3.3",
-    "pluralize": "^8.0.0",
-    "react": "^16.13.1",
-    "react-bootstrap": "^1.3.0",
-    "react-codemirror2": "^7.2.1",
-    "react-dom": "^16.13.1",
-    "react-graph-vis": "^1.0.5",
-    "react-router": "^5.2.0",
-    "react-split-pane": "^2.0.3",
-    "recoil": "0.0.10",
-    "regenerator-runtime": "^0.13.7",
-    "vis-react": "^0.5.1"
+    "graphql-playground-middleware-express": "1.7.23",
+    "graphql-playground-react": "^1.7.28",
+    "jszip": "^3.10.1",
+    "mysql2": "^3.14.1",
+    "pg": "^8.16.0",
+    "pg-hstore": "2.3.4",
+    "pluralize": "8.0.0",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.10.10",
+    "react-codemirror2": "8.0.1",
+    "react-dom": "^18.2.0",
+    "react-graph-vis": "1.0.7",
+    "react-router": "7.6.1",
+    "regenerator-runtime": "0.14.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.5",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4",
-    "@babel/preset-typescript": "^7.10.4",
+    "@babel/core": "7.27.3",
+    "@babel/plugin-proposal-class-properties": "7.18.6",
+    "@babel/plugin-proposal-object-rest-spread": "7.20.7",
+    "@babel/preset-env": "7.27.2",
+    "@babel/preset-react": "7.27.1",
+    "@babel/preset-typescript": "7.27.1",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@types/react": "^19.1.6",
+    "@types/react-dom": "^19.1.5",
+    "@typescript-eslint/eslint-plugin": "^8.33.0",
+    "@typescript-eslint/parser": "^8.33.0",
+    "@vitejs/plugin-react": "^4.5.0",
     "babel-core": "^6.26.3",
-    "babel-jest": "^26.3.0",
-    "babel-loader": "^8.1.0",
-    "css-loader": "^4.2.2",
-    "enzyme-adapter-react-16": "^1.15.4",
-    "eslint": "^7.2.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.20.6",
-    "eslint-plugin-react-hooks": "^4.0.0",
-    "html-webpack-plugin": "^4.4.1",
-    "jest": "^26.4.2",
-    "jest-puppeteer": "^3.4.0",
-    "nodemon": "^2.0.4",
-    "prettier": "^2.1.1",
-    "puppeteer": "^5.3.1",
-    "style-loader": "^1.2.1",
-    "supertest": "^4.0.2",
-    "ts-loader": "^8.0.3",
-    "tslint": "^6.1.3",
-    "tslint-immutable": "^6.0.1",
-    "typescript": "^4.0.2",
-    "url-loader": "^4.1.0",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "babel-jest": "^30.0.0-beta.3",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-prettier": "^5.4.1",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "html-webpack-plugin": "5.6.3",
+    "jest": "^29.7.0",
+    "jest-puppeteer": "11.0.0",
+    "nodemon": "^3.1.10",
+    "prettier": "^3.5.3",
+    "puppeteer": "^19.0.0",
+    "supertest": "7.1.1",
+    "ts-loader": "9.5.2",
+    "typescript": "5.8.3",
+    "url-loader": "4.1.1",
+    "vite": "^6.3.5"
   }
 }
